--- a/Codebase/Typerr/App.xaml
+++ b/Codebase/Typerr/App.xaml
@@ -1,9 +1,15 @@
 ﻿<Application x:Class="Typerr.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+
              xmlns:local="clr-namespace:Typerr"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Theme/MenuButtonTheme.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+            <SolidColorBrush x:Key="AppTheme" Color="#2d9bf0"/>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
