--- a/Codebase/Typerr/View/HomeView.xaml
+++ b/Codebase/Typerr/View/HomeView.xaml
@@ -3,18 +3,20 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Typerr.View"
+             xmlns:local="clr-namespace:Typerr.View" xmlns:components="clr-namespace:Typerr.Components"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <StackPanel>
         <TextBlock Text="Library"
                    Foreground="Black"
+                   FontWeight="Bold"
                    FontSize="24"
                    HorizontalAlignment="Left"
                    Margin="30,20,0,20"
                    />
-        <StackPanel Orientation="Horizontal">
-            
+        <StackPanel Orientation="Horizontal" Margin="20,0,0,20">
+            <components:LibTile/>
+            <components:LibTile/>
         </StackPanel>
     </StackPanel>
 </UserControl>
