--- a/Codebase/Typerr/View/HomeView.xaml
+++ b/Codebase/Typerr/View/HomeView.xaml
@@ -15,6 +15,7 @@
                    Margin="30,20,0,20"
                    />
         <StackPanel Orientation="Horizontal" Margin="20,0,0,20">
+            <components:CreateTestTile/>
             <components:LibTile/>
             <components:LibTile/>
         </StackPanel>
