--- a/Codebase/Typerr/View/HomeView.xaml
+++ b/Codebase/Typerr/View/HomeView.xaml
@@ -5,16 +5,19 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Typerr.View" xmlns:components="clr-namespace:Typerr.Components"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             Background="White">
     <StackPanel>
+        <!--> Header <-->
         <TextBlock Text="Library"
                    Foreground="Black"
                    FontWeight="Bold"
                    FontSize="24"
                    HorizontalAlignment="Left"
-                   Margin="30,20,0,20"
-                   />
-        <StackPanel Orientation="Horizontal" Margin="20,0,0,20">
+                   Margin="30,20,0,20"/>
+        <!--> Content <-->
+        <StackPanel x:Name="HomeLibraryContent" 
+                    Orientation="Horizontal" 
+                    Margin="20,0,0,20">
             <components:CreateTestTile/>
             <components:LibTile/>
             <components:LibTile/>
