--- a/Codebase/Typerr/MainWindow.xaml
+++ b/Codebase/Typerr/MainWindow.xaml
@@ -6,7 +6,8 @@
         xmlns:local="clr-namespace:Typerr"
         xmlns:views="clr-namespace:Typerr.View"
         xmlns:vms="clr-namespace:Typerr.ViewModel"
-        xmlns:fa="clr-namespace:Meziantou.WpfFontAwesome;assembly=Meziantou.WpfFontAwesome" d:DataContext="{d:DesignInstance Type=vms:MainViewModel}"
+        xmlns:fa="clr-namespace:Meziantou.WpfFontAwesome;assembly=Meziantou.WpfFontAwesome" 
+        d:DataContext="{d:DesignInstance Type=vms:MainViewModel}"
         mc:Ignorable="d"
         Height="650" Width="1000"
         WindowStyle="None"
@@ -28,7 +29,7 @@
         <WindowChrome CaptionHeight="32" 
                       ResizeBorderThickness="{x:Static SystemParameters.WindowResizeBorderThickness}"/>
     </WindowChrome.WindowChrome>
-    
+
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="225"/>
@@ -81,7 +82,7 @@
                 </StackPanel>
             </Border>
         </Grid>
-        
+
         <!--#region Window Controls-->
         <Grid VerticalAlignment="Top" Grid.Column="1">
             <StackPanel WindowChrome.IsHitTestVisibleInChrome="True" 
@@ -216,14 +217,55 @@
             </StackPanel>
         </Grid>
         <!--#endregion-->
-        
-        <!--View / Content-->
-        <ContentControl x:Name="ContentArea" 
+        <Grid x:Name="OverlayBar" 
+              Panel.ZIndex="1000" 
+              Visibility="Visible"
+              IsHitTestVisible="False"
+              WindowChrome.IsHitTestVisibleInChrome="True"
+              Grid.ColumnSpan="2"
+              Grid.Row="0"
+              Loaded="Overlay_Loaded">
+            <Grid.Background>
+                <SolidColorBrush Color="Black" Opacity=".5"/>
+            </Grid.Background>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+        </Grid>
+        <Grid x:Name="Overlay" 
+              Panel.ZIndex="1000" 
+              Visibility="Visible"
+              WindowChrome.IsHitTestVisibleInChrome="True"
+              Grid.ColumnSpan="2"
+              Grid.Row="1"
+              Loaded="Overlay_Loaded">
+                <Grid.Background>
+                    <SolidColorBrush Color="Black" Opacity=".5"/>
+                </Grid.Background>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="225"/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <views:CreateTestView x:Name="CreateTestOverlay"
+                    Grid.Column="1" 
+                                      Grid.Row="1" 
+                                      Margin="20 40"
+                                      />
+            </Grid>
+            <!--View / Content-->
+
+            <ContentControl x:Name="ContentArea" 
                         Grid.Row="1"
                         Grid.Column="1"
                         Margin="10"
                         Content="{Binding CurrentViewModel}"/>
 
-    </Grid>
-
+        </Grid>
+    
 </Window>
