--- a/Codebase/Typerr/View/CreateTestView.xaml
+++ b/Codebase/Typerr/View/CreateTestView.xaml
@@ -2,29 +2,138 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:fa="clr-namespace:Meziantou.WpfFontAwesome;assembly=Meziantou.WpfFontAwesome"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Typerr.View"
              mc:Ignorable="d">
-    <Grid Margin="10" Background="White">
+    <Grid Background="White">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="250"/>
         </Grid.ColumnDefinitions>
         <Grid Grid.Column="0">
+            <Grid.Resources>
+                <Style TargetType="Label">
+                    <Setter Property="Margin" Value="10 10 10 0"/>
+                </Style>
+                <Style TargetType="TextBox">
+                    <Setter Property="Margin" Value="10 10 10 0"/>
+                </Style>
+                
+            </Grid.Resources>
             <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
+                <RowDefinition Height="60"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="60"/>
             </Grid.RowDefinitions>
             <Label Grid.Row="0" 
                    Content="Create a New Test"
                    FontWeight="Bold"
-                   FontSize="24"/>
+                   FontSize="24"
+                   />
             <TextBox x:Name="TextAreaBox" 
+                     TextWrapping="Wrap" 
+                     AcceptsReturn="True" 
+                     VerticalScrollBarVisibility="Auto" 
                      Grid.Row="1"
-                     MinHeight="450"
-                     MinWidth="600"/>
-            <Button x:Name="OpenFromFileButton" Content="Open from file..." Grid.Row="2"/>
+                     Padding="10"
+                     MinHeight="400"
+                     MinWidth="400"/>
+            <Grid Grid.Row="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="auto"/>
+                </Grid.ColumnDefinitions>
+                <Button x:Name="OpenFromFileButton" 
+                        Grid.Column="0"
+                    Content="Open from file..." 
+                    Width="100"
+                    HorizontalAlignment="Left"
+                    Margin="10"/>
+                <Button Grid.Column="2"
+                        Content="Get Test" 
+                        Width="60"
+                    HorizontalAlignment="Left"
+                    Margin="10"/>
+            </Grid>
+            <StackPanel Orientation="Horizontal"
+                        Grid.Row="2">
+
+            </StackPanel>
+        </Grid>
+        <Grid Grid.Column="1">
+            <Grid.Resources>
+                <Style TargetType="Label">
+                    <Setter Property="Margin" Value="0 0 10 0"/>
+                </Style>
+                <Style TargetType="TextBox">
+                    <Setter Property="Margin" Value="0 0 10 0"/>
+                    <Setter Property="TextWrapping" Value="Wrap"/>
+                    <Setter Property="AcceptsReturn" Value="True"/>
+                    <Setter Property="Padding" Value="10"/>
+                    <Setter Property="VerticalScrollBarVisibility" Value="Auto"/>
+                </Style>
+            </Grid.Resources>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="46"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="60"/>
+            </Grid.RowDefinitions>
+            <Button x:Name="CreateTestClose" 
+                    Grid.Row="0"
+                    HorizontalAlignment="Right"
+                    BorderThickness="0" 
+                    Width="46" 
+                    Background="Transparent"
+                    Click="CreateTestClose_Click">
+                <Button.Style>
+                    <Style TargetType="{x:Type Button}">
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type Button}">
+                                    <Border x:Name="wButton" 
+                                                Background="{TemplateBinding Background}">
+                                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                                    </Border>
+                                    <ControlTemplate.Triggers>
+                                        <Trigger Property="IsMouseOver" 
+                                                     Value="True">
+                                            <Setter Property="Background" 
+                                                        Value="#eee" 
+                                                        TargetName="wButton" />
+                                        </Trigger>
+                                        <Trigger Property="IsPressed" 
+                                                     Value="True">
+                                            <Setter Property="Background"
+                                                        Value="#ddd" 
+                                                        TargetName="wButton" />
+                                        </Trigger>
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </Button.Style>
+                <fa:FontAwesomeIcon SolidIcon="Times" 
+                                    Foreground="Gray" 
+                                    FontSize="19"/>
+            </Button>
+            <ScrollViewer Grid.Row = "1">
+                <StackPanel>
+                    <Label Content="Title"/>
+                    <TextBox Height="60"/>
+                    <Label Content="Author"/>
+                    <TextBox/>
+                    <Label Content="Source"/>
+                    <TextBox/>
+                    <Label Content="Publish Date"/>
+                    <DatePicker Margin="0 0 10 0"/>
+                    <Label Content="Summary"/>
+                    <TextBox/>
+                </StackPanel>
+                    
+            </ScrollViewer>
         </Grid>
     </Grid>
 </UserControl>
