CreateTest opens/closes, proper binding, refactored to better follow MVVM
Still getting used to MVVM

--- a/Codebase/Typerr/Components/LibTile.xaml
+++ b/Codebase/Typerr/Components/LibTile.xaml
@@ -81,7 +81,7 @@
                     <StackPanel VerticalAlignment="Center" 
                                 Height="auto" 
                                 Width="auto">
-                        <Label Content="{Binding VM.Title, ElementName=LibraryTile}"
+                        <Label Content="{Binding ViewModel.Title, ElementName=LibraryTile}"
                                VerticalContentAlignment="Bottom"
                                Padding="5 0"
                                Foreground="Black"
