--- a/Codebase/Typerr/Components/CreateTestTile.xaml
+++ b/Codebase/Typerr/Components/CreateTestTile.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Typerr.Components"
              xmlns:vms="clr-namespace:Typerr.ViewModel" 
-             d:DataContext="{d:DesignInstance Type=vms:CreateTestTileViewModel}"
+             d:DataContext="{d:DesignInstance Type=vms:MainViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Border Width="150"
@@ -22,7 +22,6 @@
                     Width="auto"
                     Height="auto"
                     BorderThickness="0"
-                    Click="CreateTestButton_Click"
                     Command="{Binding CreateTestTileCommand}">
                 <Button.Resources>
                     <Style TargetType="{x:Type Border}">
