--- a/Codebase/Typerr/MainWindow.xaml
+++ b/Codebase/Typerr/MainWindow.xaml
@@ -219,7 +219,7 @@
         <!--#endregion-->
         <Grid x:Name="OverlayBar" 
               Panel.ZIndex="1000" 
-              Visibility="Visible"
+              Visibility="{Binding OverlayBarVisibility}"
               IsHitTestVisible="False"
               WindowChrome.IsHitTestVisibleInChrome="True"
               Grid.ColumnSpan="2"
@@ -237,7 +237,7 @@
         </Grid>
         <Grid x:Name="Overlay" 
               Panel.ZIndex="1000" 
-              Visibility="Visible"
+              Visibility="{Binding OverlayVisibility}"
               WindowChrome.IsHitTestVisibleInChrome="True"
               Grid.ColumnSpan="2"
               Grid.Row="1"
